// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main page 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <!--0-->
  <!--0-->
  <!--0-->
  <div class=\\"project-list\\">
    <!--0-->
    <a class=\\"project-card project-card-create\\" href=\\"projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.11) </footer>
<!--1-->"
`;

exports[`main page 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <!--0-->
  <!--0-->
  <!--0-->
  <div class=\\"project-list\\">
    <a class=\\"project-card\\" href=\\"projects/1\\"><span class=\\"name\\">Test</span></a>
    <a class=\\"project-card\\" href=\\"projects/2\\"><span class=\\"name\\">Test2</span></a>
    <!--0-->
    <a class=\\"project-card project-card-create\\" href=\\"projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.11) </footer>
<!--1-->"
`;
